
?? ??? 2007 - 2.5.0-dev3
------------------------

 * Fixed deprecatevar:var=N/S action so that it decrements N every S seconds
   as documented instead of decrementing by a rate.

 * Enable ModSecurity to look at partial response bodies. In previous
   versions ModSecurity would respond with status code 500 when the
   response body was too long. Now, if SecResponseBodyLimitAction is
   set to "ProcessPartial", it will process the part of the response
   body received up until that point but send the rest without buffering.

 * ModSecurity will now process phases 3 and 4 even when request processing
   is interrupted (either by Apache - e.g. by responding with 400, 401
   or 403, or by ModSecurity itself).

 * Fix the base64decode transformation function to not return extra
   characters at the end.

 * Fixed potential corruption at end of strings after using base64Decode
   (APR-Util issue). TODO make a better CHANGELOG entry ;)

 * Return from the output filter with an error in addition to setting
   up the HTTP error status in the output data.

 * Used new API calls to get the server version/banner when available.

 * Added "logdata" meta action to allow safe logging of raw transaction data.

 * Added TX_SEVERITY that keeps track of the highest severity
   for any matched rules so far.

 * Added ARGS_GET, ARGS_POST, ARGS_GET_NAMES, ARGS_POST_NAMES variables to
   allow seperation of GET and POST arguments.

 * Added MODSEC_BUILD variable that contains the numeric build value based
   on the ModSecurity version.

 * Enhanced debug logging.

 * Cleaned up and clarified some documentation.

 * Performance improvements and greater control over caching transformations.

 * Stricter validation for @validateUtf8Encoding.

 * Capture the match in TX:0 when using "capture" action in phrase match
   operators.

 * Added Cygwin to the list of platforms not supporting the hidden
   visibility attribute.


11 Sep 2007 - 2.1.3
-------------------
